@@ -36,6 +36,7 @@ Post-v2.7.0
      * The port status bit OFPPS_LIVE now reflects link aliveness.
    - Fedora Packaging:
      * OVN services are no longer restarted automatically after upgrade.
+   - Add --cleanup option to command 'ovs-appctl exit' (see ovs-vswitchd(8)).
 
 v2.7.0 - 21 Feb 2017
 ---------------------
